--- a/src/Components/Pages/fabrics/Fabrics.css
+++ b/src/Components/Pages/fabrics/Fabrics.css
@@ -128,6 +128,26 @@
   font-size: 35px;
 }
 
+.reshead1{
+  display: none;
+}
+
+ul {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+li {
+  padding-left: 1em;
+  text-indent: -1em;
+}
+
+li:before {
+  content: "★";
+  padding-right: 5px;
+}
+
 @media only screen and (max-width:750px){
   .imgfabrow1{
     flex-direction: column;
@@ -313,6 +333,21 @@
     font-family: 'Poppins', sans-serif;
   }
 
+  ul {
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+  }
+  
+  li {
+    padding-left: 1em;
+    text-indent: -1em;
+  }
+  
+  li:before {
+    content: "★";
+    padding-right: 5px;
+  }
 
   .imgfabrow2 img{
     height: auto;
@@ -347,6 +382,22 @@
   .imgfabrow1{
     flex-direction: column;
   }
+
+  .bgFabrics{
+    background-image: url("../../About/Wedding\ Collection\ \(3\).svg");
+    background-size: contain;
+    background-repeat: repeat;
+  }
+
+  .reshead1{
+    display: block;
+  }
+
+  .reshead2{
+    display: none;
+  }
+  
+  
   .imgfabrow2{
     flex-direction: column;
   }
@@ -361,17 +412,6 @@
     height: 240px;
     padding: 5px;
   }
-  .bgFabrics{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    
-    flex-direction: column;
-    background-image: url('../../About/bg.svg');
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-  }
+
   
 }
