--- a/src/Components/Pages/Getpampered/getpampered.css
+++ b/src/Components/Pages/Getpampered/getpampered.css
@@ -45,7 +45,7 @@
     display: flex;
     width: 600px;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 30px;
     justify-content: flex-start;
 }
 
@@ -116,6 +116,10 @@
 @media only screen and (max-width:700px){
     .getpamdetailsdiv{
         width: 90%;
+    }
+
+    .gpl2{
+        margin-bottom: 60px;
     }
 
 
