--- a/src/Components/Pages/ImageCons/ImageCons.css
+++ b/src/Components/Pages/ImageCons/ImageCons.css
@@ -3,6 +3,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+.smile{
+    margin-top: -60px !important;
+}
+
 .topbar{
     /* width: 100%;
     height: 600px; */
@@ -136,6 +140,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 30px;
+    margin-bottom: -60px;
 }
 .steps1 >img{
     margin-top: 70px;
@@ -153,6 +158,9 @@
 @media only screen and (max-width:700px) {
     .icon-holder{
         margin: 5px;
+    }
+    .icons{
+        margin-top: 10px;
     }
     .icon-holder>img{
         width: 80px;
@@ -199,8 +207,9 @@
     .img-row>img{
         width: 300px;
         height: 400px;
-        object-fit: cover;
+        object-fit: contain;
         border-radius: 20px;
+        margin-top: -20px;
     }
 
     .img-row>p{
@@ -219,6 +228,7 @@
     .steps{
         width: 100%;
         padding: 5px;
+        margin-bottom: -20px;
     }
     .steps>a>img{
         width: 180px;
@@ -235,6 +245,16 @@
         width: 100%;
         height: 120px;
         padding: 5px;
+    }
+
+    .steps1{
+        margin-top: -100px;
+        margin-bottom: -60px;
+    }
+
+    .smile{
+        margin-top: -20px;
+        margin-bottom: 20px;
     }
     
 }
