get pampered changes

--- a/src/Components/Pages/Getpampered/getpampered.css
+++ b/src/Components/Pages/Getpampered/getpampered.css
@@ -121,12 +121,14 @@
 
     .gpl2{
         margin-bottom: 60px;
+        margin-top: -15px;
     }
 
 
     .getpamdetailsdiv2{
         width: 90%;
     }
+    
 
     .tagimgcontainer{
         margin-top: 60px;
