--- a/src/Components/DesignerCollections/DesignerCollections.css
+++ b/src/Components/DesignerCollections/DesignerCollections.css
@@ -94,12 +94,18 @@
 }
 
 .prodpaget1{
-    font-size: 30px;
+    font-size: 64px;
     font-weight: 600;
+    text-align: center;
+    width: 100%;
 }
 
 .prodpaget2{
-    font-size: 22px;
+    font-size: 30px;
+    text-align: center;
+    width: 100%;
+    margin-top: -10px;
+    margin-bottom: 40px;
     /* font-weight: 600; */
 }
 
