--- a/src/Components/Landing/TestiCaro.css
+++ b/src/Components/Landing/TestiCaro.css
@@ -30,16 +30,16 @@
 
 
 .caroresfix>div>div>p{
-    color:#FFB8BC;
-    font-size: 25px;
+    color:white;
+    font-size: 25px !important;
     font-weight: 500;
     font-style: italic;
     
 
 }
 .caroresfix>div>div>h4{
-    color:#FFB8BC;
-    font-size: 30px;
+    color:white;
+    font-size: 30px !important;
     font-weight: 400;
     margin-left: 20px;
 }
@@ -106,7 +106,7 @@
     
     
     .caroresfix>div>div>p{
-        color:#FFB8BC;
+        color:white;
         font-size: 25px;
         font-weight: 500;
         font-style: italic;
@@ -114,14 +114,14 @@
     
     }
     .caroresfix>div>div>h4{
-        color:#FFB8BC;
+        color:white;
         font-size: 30px;
         font-weight: 400;
         margin-left: 5px;
     }
 
     .caroresfix>div>div>p{
-        color:#FFB8BC;
+        color:white;
         font-size: 25px;
         font-weight: 400;
         margin-left: 5px;
