--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,191 +1,183 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
 
-.prenavcontainer{
-    height: 20px;
-    width: 100%;
-    background-color: rgb(47, 0, 33);
-    color: white;
-    font-size: 12px;
-    letter-spacing: 2px;
-    font-family: 'Rubik', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 15px;
+.navcontainer {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #270641;
+  color: black;
 }
 
-.navcontainer{
-    width: 100%;
-    height: 65px;
-    display: flex;
-    /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: #DDFDFF;
-    color: black;
-    /* margin-bottom: 200px; */
+.navinnercontainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+.hamburger {
+  color: #ffb8bc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
 }
 
-.navinnercontainer{
-    width: 97%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-   
+.hamburger > p {
+  margin-left: 20px;
+  margin-top: 16px;
 }
 
-
-.navlogocontainer span{
-    font-size: 40px;
-    /* letter-spacing:10px; */
-    font-family: 'Great Vibes', cursive;
-    cursor: pointer;
+.navlogocontainer span {
+  font-size: 40px;
+  /* letter-spacing:10px; */
+  font-family: "Great Vibes", cursive;
+  cursor: pointer;
 }
 
-.navicons{
-    width: 320px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 16px;
+.navicons {
+  width: 320px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 16px;
 }
 
-.navoptions{
-    width: 930px;
-    display: flex;
-    justify-content: space-evenly;
+.navoptions {
+  width: 930px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.navoptions span{
-    padding: 10px;
-    color:#270641;
+.navoptions span {
+  padding: 10px;
+  color: #270641;
 }
 
-.navoptions span:hover{
-    position: relative;
-    bottom:  5px;
-    cursor: pointer;
+.navoptions span:hover {
+  position: relative;
+  bottom: 5px;
+  cursor: pointer;
 }
 
-.hamburger{
-    display: none;
+.sidenavbarcustom {
+  position: fixed;
+  right: -250px;
+  top: 0;
+  width: 250px;
+  background-color: #ddfdff;
+  z-index: 10;
+  height: 100vh;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  /* padding: 20px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: right 0.5s ease;
 }
 
-.sidenavbarcustom{
-    position: fixed;
-    right: -250px;
-    top: 0;
-    width: 250px;
-    background-color: #DDFDFF;
-    z-index: 10;
-    height: 100vh;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    /* padding: 20px; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    transition: right 0.5s ease; 
-
-    
+.showsidenav {
+  left: 0px !important;
+  transition: right 0.5s ease;
 }
 
-.showsidenav{
-    right: 0px !important; 
-    transition: right 0.5s ease; 
+.sidebarlinks {
+  font-weight: 500;
+  margin: 10px;
+  margin-left: 20px;
+  cursor: pointer;
 }
 
-
-.sidebarlinks{
-    font-weight: 500;
-    margin: 10px;
-    margin-left: 20px;
-    cursor: pointer;
+.slidebarlogo {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  width: 100%;
 }
 
-.slidebarlogo{
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    width: 100%;
-
+.slidebarlogo img {
+  height: auto;
+  width: 170px;
+  margin-top: 40px;
 }
 
-.slidebarlogo img{
-    height: auto;
-    width: 170px;
-    margin-top: 40px;
+.closearrow {
+  width: 30px;
+  height: 30px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 50%;
+  margin-top: 30px;
+  align-self: flex-start;
+  margin-left: 200px;
+  cursor: pointer;
+  rotate: 180deg;
 }
 
-.closearrow{
-    width: 30px;
-    height: 30px;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    border-radius: 50%;
-    margin-top: 30px;
-    align-self: flex-start;
-    margin-left: 30px;
+.search {
+  width: 100%;
+  padding: 20px;
+  display: none;
 }
-
 @media screen and (max-width: 600px) {
+  .search {
+    width: 100%;
+    padding: 20px;
+    display: block;
+  }
 
+  .navoptions span {
+    padding: 2px;
+  }
+  .navlogocontainer span {
+    font-size: 20px;
+    letter-spacing: 5px;
+  }
 
+  .fa-magnifying-glass {
+    display: none;
+  }
 
-  
+  .navicons {
+    font-size: 15px;
+    width: 150px;
+    display: none;
+  }
 
-    .navoptions span{
-        padding: 2px;
-    }
-    .navlogocontainer span{
-        font-size: 20px;
-        letter-spacing: 5px;
-    }
-    
-    .fa-magnifying-glass{
-        display: none;
-    }
-
-    .navicons{
-        font-size: 15px;
-        width: 150px;
-        display: none;
-    }
-
-    .navlogocontainer>img{
-        width: 200px !important;
-        height: 100px;
-    }
-
+  .navlogocontainer > img {
+    width: 200px !important;
+    height: 100px;
+  }
 }
 
 @media screen and (max-width: 900px) {
-
-    .navlogocontainer span{
-        font-size: 25px;
-        letter-spacing: 5px;
-    }
-    
-
+  .navlogocontainer span {
+    font-size: 25px;
+    letter-spacing: 5px;
+  }
 }
 
+@media screen and (max-width: 800px) {
+  .navoptions {
+    display: none;
+  }
 
-@media screen and (max-width:800px) {
-    .navoptions{
-        display: none;
-    }
+  .Typewriter__wrapper {
+    font-size: 10px;
+  }
 
-    .Typewriter__wrapper{
-        font-size: 10px;
-    }
-
-    .hamburger {
-        display: block;
-    }
+  .hamburger {
+    display: block;
+  }
 }
-
