--- a/src/Components/Pages/Wedding.css
+++ b/src/Components/Pages/Wedding.css
@@ -10,6 +10,7 @@
     background-repeat:no-repeat;
     background-position: center ;
     background-size: contain;
+    border: 10px solid #9ADCE1;
   
 }
 
