--- a/src/Components/Productpage/Productpage.css
+++ b/src/Components/Productpage/Productpage.css
@@ -10,6 +10,7 @@
     background-repeat: no-repeat;
     height: 100vh;
     align-items: center;
+    font-family: 'Poppins', sans-serif;
 }
 
 .prodpagegalsection{
