--- a/src/Components/Landing/TestiCaro.css
+++ b/src/Components/Landing/TestiCaro.css
@@ -30,7 +30,7 @@
 
 
 .caroresfix>div>div>p{
-    color:white;
+    color:#FFB8BC;
     font-size: 25px !important;
     font-weight: 500;
     font-style: italic;
@@ -38,7 +38,7 @@
 
 }
 .caroresfix>div>div>h4{
-    color:white;
+    color:#FFB8BC;
     font-size: 30px !important;
     font-weight: 400;
     margin-left: 20px;
@@ -105,26 +105,17 @@
     }
     
     
-    .caroresfix>div>div>p{
-        color:white;
-        font-size: 25px;
-        font-weight: 500;
-        font-style: italic;
-        
-    
-    }
     .caroresfix>div>div>h4{
-        color:white;
-        font-size: 30px;
+        color:#FFB8BC;
+        font-size: 25px !important;
         font-weight: 400;
         margin-left: 5px;
     }
 
     .caroresfix>div>div>p{
-        color:white;
-        font-size: 25px;
-        font-weight: 400;
-        margin-left: 5px;
+        color:#FFB8BC;
+        font-size: 15px !important;
+        font-weight: 500;
     }
     
     .Landingtesti{
