--- a/src/Components/Landing/newlanding.css
+++ b/src/Components/Landing/newlanding.css
@@ -1,174 +1,209 @@
-.landsec1{
-    height:650px;
-    width: 100%;
-   background: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
+.landsec1 {
+  height: 650px;
+  width: 100%;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.landing{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-image: url('./bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+.landing {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url("./bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.landsec1>P{
-    color: #FFB8BC;
-    position: relative;
-    font-size: 28px;
-
-    
-    
+.landsec1 > P {
+  color: #ffb8bc;
+  position: relative;
+  font-size: 28px;
 }
 
-.landiconsdiv{
-    display: flex;
-    margin-bottom: -25px;
-
+.landiconsdiv {
+  display: flex;
+  margin-bottom: -25px;
 }
 
-
-.landbgdiv{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* background-image: url('./bg.png');
+.landbgdiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* background-image: url('./bg.png');
     background-repeat: no-repeat;
     background-size: cover; */
 }
 
-.landtit{
-    font-family: 'Poppins', sans-serif;
-    font-size: 45px;
-    font-weight: 600;
-    margin-top: 60px;
+.landtit {
+  font-family: "Poppins", sans-serif;
+  font-size: 45px;
+  font-weight: 600;
+  margin-top: 60px;
 }
 
-.landiconsdiv{
-    width: 85%;
+.landiconsdiv {
+  width: 85%;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 50px;
+}
+
+.landiconsdiv p {
+  margin-top: 20px;
+}
+
+.landser {
+  font-family: "Poppins", sans-serif;
+  font-size: 40px;
+  font-weight: 600;
+  color: #270641;
+}
+
+.landser2 {
+  font-family: "Poppins", sans-serif;
+  font-size: 40px;
+  margin-top: 70px;
+  font-weight: 600;
+  color: #270641;
+}
+
+.servcaro {
+  margin-top: 40px;
+  width: 85%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.servcarocont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 162px;
+  background-color: #270641;
+  height: 323px;
+  width: 225px;
+  padding: 20px;
+  cursor: pointer;
+}
+.servcarocont img {
+  height: auto;
+  width: 150px;
+  margin-bottom: 10px;
+}
+
+.servcarocont span {
+  color: #ffb8bc;
+  font-size: 20px;
+  text-align: center;
+  /* margin-top: 10px; */
+}
+
+.carodiv {
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media only screen and (max-width: 1252px) {
+  .landbgdiv {
     display: flex;
-    justify-content: space-evenly;
-    margin-top: 50px;
-}
+    flex-direction: column;
+    align-items: center;
+    background-image: url("./Wedding\ Collection\ \(1\).svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
-.landiconsdiv p{
-    margin-top: 20px;
-}
-
-.landser{
-    font-family: 'Poppins', sans-serif;
-    font-size: 40px;
-    font-weight: 600;
-    color:#270641;
-   
-}
-
-.landser2{
-    font-family: 'Poppins', sans-serif;
-    font-size: 40px;
-    margin-top: 70px;
-    font-weight: 600;
-    color:#270641;
-    
-
-}
-
-.servcaro{
+  .servcaro {
     margin-top: 40px;
     width: 85%;
     display: flex;
     justify-content: space-evenly;
-}
+    flex-wrap: wrap;
+  }
 
-.servcarocont{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 162px;
-    background-color: #270641;
-    height: 323px;
-    width: 225px;
-    padding: 20px;
-    cursor: pointer;
-}
-.servcarocont img{
+  .servcaro img {
     height: auto;
-    width: 150px;
+    width: 240px !important;
     margin-bottom: 10px;
-}
+  }
 
-.servcarocont span{
-    color: #FFB8BC;
-    font-size: 20px;
+  .removemargin {
+    margin-top: 0px !important;
+  }
+
+  .landser {
+    margin-top: 50px !important;
+  }
+
+  .landser2 {
+    margin-top: 50px !important;
+  }
+
+  .Landingtesti {
+    margin-top: 50px !important;
+  }
+
+  .landiconsdiv {
+    flex-wrap: wrap !important;
+  }
+
+  .givenmargin {
+    margin-top: 10px;
+  }
+
+  .landtit {
+    font-size: 28px;
     text-align: center;
-    /* margin-top: 10px; */
+  }
 }
 
+@media screen and (max-width: 700px) {
+  .carodiv {
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
+  .caaroimg {
+    height: 350px;
+    width: 100%;
+  }
 
+  .givenmargin > p {
+    font-size: 0.9rem !important;
+    margin-top: 0px;
+  }
 
-@media only screen and (max-width:1252px)
+  .landiconsdiv {
+    width: 85%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 5px;
+  }
+  .landtit {
+    margin-top: 40px;
+  }
 
-{
+  .landser {
+    font-size: 30px;
+  }
+  .landser2 {
+    font-size: 30px;
+  }
 
-    
+  .servcaro {
+    margin-top: 20px;
+  }
 
-    .landbgdiv{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-image: url('./Wedding\ Collection\ \(1\).svg');
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-
-    .servcaro{
-        margin-top: 40px;
-        width: 85%;
-        display: flex;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-    }
-
-    .servcaro img{
-        height: auto;
-        width: 240px !important;
-        margin-bottom: 10px;
-    }
-
-    .removemargin{
-        margin-top: 0px !important;
-    }
-
-    .landser{
-        margin-top: 50px !important;
-
-    }
-
-    .landser2{
-        margin-top: 50px !important;
-    }
-
-    .Landingtesti{
-        margin-top: 50px !important;
-
-    }
-
-    .landiconsdiv{
-        flex-wrap: wrap !important; 
-    }
-
-    .givenmargin{
-        margin-top: 10px;
-    }
-
-    .landtit{
-        font-size: 40px;
-        text-align: center;
-    }
+  .Landingtesti {
+    font-size: 30px !important;
+  }
+  .landsec1 {
+    height: 350px;
+  }
 }
