--- a/src/Components/Pages/GalleryCaro.css
+++ b/src/Components/Pages/GalleryCaro.css
@@ -61,6 +61,7 @@
 
 .carousel-control-next, .carousel-control-prev{
   opacity: 1;
+  font-weight: 800;
 }
 
 @media only screen and (max-width: 700px) {
