works by jeremy

--- a/src/Components/Pages/ImageCons/ImageCons.css
+++ b/src/Components/Pages/ImageCons/ImageCons.css
@@ -1,3 +1,9 @@
+.input{
+    font-family: 'Poppins', sans-serif  !important;
+
+}
+
+
 .imagecons{
     height: 100%;
     font-family: 'Poppins', sans-serif;
@@ -163,6 +169,9 @@
 
 
 @media only screen and (max-width:700px) {
+    .smilebarincus{
+        margin-top: -60px !important;
+    }
     .icon-holder{
         margin: 5px;
     }
