--- a/src/Components/Landing/newlanding.css
+++ b/src/Components/Landing/newlanding.css
@@ -42,6 +42,11 @@
   margin-top: 60px;
 }
 
+.untoldclass{
+  margin-top: 60px !important;
+  font-size: 20px;
+}
+
 .landiconsdiv {
   width: 85%;
   display: flex;
@@ -70,7 +75,7 @@
 
 .servcaro {
   margin-top: 40px;
-  width: 85%;
+  width: 90%;
   display: flex;
   justify-content: space-evenly;
 }
@@ -119,7 +124,7 @@
 
   .servcaro {
     margin-top: 40px;
-    width: 85%;
+    width: 90%;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
@@ -167,6 +172,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  .untoldclass{
+    margin-top: 30px  !important;
+    font-size: 18px;
   }
 
   .caaroimg {
