--- a/src/Components/Contactus/contact.css
+++ b/src/Components/Contactus/contact.css
@@ -246,6 +246,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        border: 4px solid #97D9DE;
     }
 
     
