--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -9,6 +9,9 @@
   justify-content: space-evenly;
   align-items: center;
   color: black;
+  position: fixed;
+  margin-top: 30px;
+  z-index: 100;
 }
 
 .resnav{
